SET(CMAKE_CXX_COMPILER "g++")
PROJECT(mmp_code)
CMAKE_MINIMUM_REQUIRED (VERSION 3.20.0)
SET(CMAKE_CXX_FLAGS "-g -Wall")

find_package(Protobuf REQUIRED)
    

#ADD_SUBDIRECTORY(proto/google/type)
#ADD_SUBDIRECTORY(proto/google/api)
ADD_SUBDIRECTORY(proto)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${Protobuf_INCLUDE_DIRS})
ADD_EXECUTABLE(main main.cpp)
TARGET_LINK_LIBRARIES(main proto ${Protobuf_LIBRARIES})
set_property(TARGET main PROPERTY CXX_STANDARD 20)
